# potatohead

./: .gitattributes  .gitignore  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  codecov.yml  index.html  makefile  objects.inv  release-plz.toml  sitemap.xml
crates/baked_potato/: Cargo.toml
crates/baked_potato/src/: error.rs  health.rs  lib.rs  mock.rs  openai.rs  server.rs  util.rs
crates/baked_potato/tests/: lib.rs
crates/baked_potato/tests/agent/: agent_test.rs  agentic_loop_test.rs  builder_test.rs  callbacks_test.rs  criteria_test.rs  embedding_test.rs  memory_test.rs  mod.rs  orchestration_test.rs  session_test.rs  spec_test.rs  store_test.rs  tool_ext_test.rs
crates/baked_potato/tests/common/: mod.rs
crates/baked_potato/tests/types/: mod.rs  test_types.rs  types_test.rs
crates/baked_potato/tests/workflow/: mod.rs  test_workflow.rs  workflow_test.rs
crates/potato_agent/: Cargo.toml
crates/potato_agent/src/: lib.rs
crates/potato_agent/src/agents/: agent.rs  builder.rs  callbacks.rs  client.rs  criteria.rs  embed.rs  error.rs  mod.rs  run_context.rs  runner.rs  session.rs  task.rs  tool_ext.rs  types.rs
crates/potato_agents/: Cargo.toml
crates/potato_agents/src/: lib.rs
crates/potato_agents/src/agents/: agent.rs  client.rs  error.rs  task.rs  types.rs
crates/potato_error/: Cargo.toml
crates/potato_error/src/: lib.rs
crates/potato_head/: Cargo.toml
crates/potato_head/src/: lib.rs
crates/potato_head/src/client/: http.rs  mod.rs  openai.rs  types.rs
crates/potato_head/src/common/: util.rs
crates/potato_head/src/error/: mod.rs
crates/potato_head/src/helpers/: mod.rs  openai.rs  traits.rs
crates/potato_head/src/mouth/: mouth.rs
crates/potato_head/src/potato_parts/: mod.rs  mouth.rs
crates/potato_head/src/providers/: client.rs  mod.rs
crates/potato_lib/: Cargo.toml
crates/potato_lib/src/: lib.rs
crates/potato_macro/: Cargo.toml
crates/potato_macro/src/: lib.rs
crates/potato_prompt/: Cargo.toml
crates/potato_prompt/src/: lib.rs
crates/potato_prompt/src/prompt/: error.rs  interface.rs  mod.rs  settings.rs  types.rs
crates/potato_prompts/: Cargo.toml
crates/potato_prompts/src/: lib.rs
crates/potato_prompts/src/chat/: mod.rs  prompt.rs  sanitize.rs  types.rs
crates/potato_prompts/src/prompt/: error.rs  interface.rs  mod.rs  types.rs
crates/potato_providers/: Cargo.toml
crates/potato_providers/src/: lib.rs
crates/potato_providers/src/anthropic/: types.rs
crates/potato_providers/src/openai/: client.rs  mod.rs  types.rs  utils.rs
crates/potato_spec/: Cargo.toml
crates/potato_spec/src/: error.rs  lib.rs  loader.rs  spec.rs
crates/potato_spec/tests/: load_spec.rs
crates/potato_spec/tests/fixtures/: simple.yaml
crates/potato_tools/: Cargo.toml
crates/potato_tools/src/: lib.rs  types.rs  util.rs
crates/potato_traits/: Cargo.toml
crates/potato_traits/src/: api_client.rs  lib.rs  openai.rs  traits.rs
crates/potato_type/: Cargo.toml
crates/potato_type/src/: error.rs  lib.rs  traits.rs
crates/potato_type/src/common/: mod.rs
crates/potato_type/src/google/: chat.rs  embedding.rs  mod.rs  predict.rs
crates/potato_type/src/openai/: chat.rs  embedding.rs  mod.rs
crates/potato_type/src/prompt/: builder.rs  interface.rs  mod.rs  settings.rs  types.rs
crates/potato_type/src/tools/: async_tool.rs  mod.rs
crates/potato_util/: Cargo.toml
crates/potato_util/src/: error.rs  lib.rs  utils.rs
crates/potato_utils/: Cargo.toml
crates/potato_utils/src/: utils.rs
crates/potato_workflow/: Cargo.toml
crates/potato_workflow/src/: lib.rs
crates/potato_workflow/src/workflow/: error.rs  events.rs  flow.rs  mod.rs  tasklist.rs  types.rs  workflow.rs
crates/potato_workflows/: Cargo.toml
crates/potato_workflows/src/workflow/: error.rs  mod.rs  workflow.rs
crates/worm-macros/: Cargo.toml
crates/worm-macros/src/: lib.rs
crates/wormtongue/: Cargo.toml
crates/wormtongue/examples/: openai_chat.rs
crates/wormtongue/src/: lib.rs
py-potato/: CLAUDE.md  Cargo.toml  Makefile  mkdocs.yml  pyproject.toml
py-potato/docs/: contributing.md  embeddings.md  index.md  prompts.md  providers.md  workflow.md
py-potato/examples/: benchmark.py  example_workflow.py  gemini_embedding.py  openai_embedding.py  potato_joke.py  query_reformulation.py  structured_output.py  vertex_embedding.py
py-potato/examples/anthropic/: sdk.py  structured_output.py
py-potato/examples/google/: query_reformulation.py  vertex_embedding.py
py-potato/examples/openai/: example_workflow.py  potato_joke.py  sdk.py  structured_output.py
py-potato/python/potato_head/: __init__.py  __init__.pyi  _potato_head.pyi
py-potato/scripts/: build_docs.py  create_stubs.py
py-potato/src/: anthropic.rs  google.rs  lib.rs  mock.rs  openai.rs
py-potato/tests/: conftest.py  test_embed.py  test_prompt.py  test_workflow.py
py-potato/tests/google/: test_config.py  test_gemini_config.py
py-potato/tests/openai/: test_openai_config.py
py-potato/tests/prompt/: test_anthropic.py  test_gemini.py  test_openai.py  test_prompt_load.py
py-potato_head/: Cargo.toml  Makefile  README.md  pyproject.toml
py-potato_head/docs/: mkdocs.yml
py-potato_head/docs/docs/: index.md  quickstart.md
py-potato_head/examples/: bind_context.py  chat.py  chat_openai.py  chat_stream.py  chat_structured.py  save_load.py
py-potato_head/python/potato_head/: __init__.py  __init__.pyi
py-potato_head/src/: anthropic.rs  lib.rs  openai.rs  parts.rs  prompts.rs  test.rs
py-potato_head/tests/: _conftest.py  test_chat_prompt.py
py-potato_head/tests/chat/: test_message.py  test_mouth.py  test_prompt.py
py-potatohead/: Cargo.toml  Makefile  pyproject.toml
py-potatohead/python/potatohead/: __init__.py  __init__.pyi  version.py
py-potatohead/src/: lib.rs  openai.rs
py-potatohead/tests/: _conftest.py  test_chat_prompt.py
py-wormtongue/: Cargo.toml  Makefile  pyproject.toml
py-wormtongue/python/wormtongue/: __init__.py  version.py
py-wormtongue/src/: lib.rs  openai.rs
py-wormtongue/tests/: _conftest.py  conftest.py  test_chat_prompt.py
(+228 files in other folders)
