[workspace]
resolver = "2"
members = [
  "crates/*",
]
default-members = [
  "crates/*",
]

[workspace.package]
version = "0.2.2"
authors = ["demml <support@demmlai.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/demml/potatohead"

[workspace.dependencies]
baked-potato = { path = "crates/baked_potato", version = "0.2.2" }
potato-agent = { path = "crates/potato_agent", version = "0.2.2" }
potato-prompt = { path = "crates/potato_prompt", version = "0.2.2" }
potato-type = { path = "crates/potato_type", version = "0.2.2" }
potato-workflow = { path = "crates/potato_workflow", version = "0.2.2" }
potato-util = { path = "crates/potato_util", version = "0.2.2" }
potato-head = { path = "crates/potato_head", version = "0.2.2" }



anyhow = "1.0.93"
chrono = { version = "0.*", features = ["serde"] }
colored_json = "5.*"
mockito = "1.*"
mime_guess = "2.*"
pyo3 = { version = "0.25.*", features = ["extension-module", "anyhow", "serde", "chrono"] }
regex = "1.*"
reqwest = { version = "0.12.*", features = ["json", "stream", "multipart", "rustls-tls", "rustls-tls-native-roots", "blocking" ], default-features = false }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
thiserror = "2.*"
tokio = { version = ">1.13.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.*"
uuid = { version = "1.*", features = ["v7"] }
walkdir = "2.*"


[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.release-no-lto]
inherits = "release"
lto = false
