[workspace]
resolver = "2"
members = [
  "crates/*",
  "py-potato",
]
default-members = [
  "crates/*",
]

[workspace.package]
version = "0.3.3"
authors = ["demml <support@demmlai.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/demml/potatohead"

[workspace.dependencies]
baked-potato = { path = "crates/baked_potato", version = "0.3.3" }
potato-agent = { path = "crates/potato_agent", version = "0.3.3" }
potato-prompt = { path = "crates/potato_prompt", version = "0.3.3" }
potato-type = { path = "crates/potato_type", version = "0.3.3" }
potato-workflow = { path = "crates/potato_workflow", version = "0.3.3" }
potato-util = { path = "crates/potato_util", version = "0.3.3" }
potato-head = { path = "crates/potato_head", version = "0.3.3" }

anyhow = "1.0.93"
base64 = "0.*"
chrono = { version = "0.*", features = ["serde"] }
colored_json = "5.*"
mockito = "1.*"
mime_guess = "2.*"
pyo3 = { version = "0.25.*", features = ["extension-module", "anyhow", "serde", "chrono"] }
regex = "1.*"
reqwest = { version = "0.12.*", features = ["json", "stream", "multipart", "rustls-tls", "rustls-tls-native-roots", "blocking" ], default-features = false }
rusty-logging = "0.*"
schemars = { version = "1.*" }
serde = { version = "1.*", features = ["derive", "rc"] }
serde_json = "1.*"
thiserror = "2.*"
tokio = { version = ">1.13.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.*"
uuid = { version = "1.*", features = ["v7"] }
walkdir = "2.*"


[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.release-no-lto]
inherits = "release"
lto = false
