[workspace]
resolver = "2"
members = [
  "crates/*",
  "py-potato",
]
default-members = [
  "crates/*",
]

[workspace.package]
version = "0.13.0"
authors = ["demml <support@demmlai.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/demml/potatohead"

[workspace.dependencies]
baked-potato = { path = "crates/baked_potato", version = "0.13.0" }
potato-agent = { path = "crates/potato_agent", version = "0.13.0" }
potato-provider = { path = "crates/potato_provider", version = "0.13.0" }
potatohead-macro = { path = "crates/potato_macro", version = "0.13.0" }
potato-type = { path = "crates/potato_type", version = "0.13.0" }
potato-workflow = { path = "crates/potato_workflow", version = "0.13.0" }
potato-util = { path = "crates/potato_util", version = "0.13.0" }
potato-head = { path = "crates/potato_head", version = "0.13.0" }
potato-state = { path = "crates/potato_state", version = "0.13.0" }

anyhow = "1.0.93"
base64 = "0.*"
chrono = { version = "0.*", features = ["serde"] }
colored_json = "5.*"
http = "1.*"
gcloud-auth = { version = "1.*" }
mockito = "1.*"
pyo3 = { version = "0.27.2", features = ["abi3-py310", "extension-module", "anyhow", "serde", "chrono"] }
pythonize = { version = "0.*" }
rand = "0.9.*"
regex = "1.*"
reqwest = { version = "0.12.*", features = ["json", "stream", "multipart", "rustls-tls", "rustls-tls-native-roots", "blocking" ], default-features = false }
rusty-logging = "0.*"
jsonschema = "0.*"
schemars = { version = "1.*" }
serde = { version = "1.*", features = ["derive", "rc"] }
serde_yaml = "0.*"
serde_json = "1.*"
thiserror = "2.*"
tokio = { version = ">1.13.0", features = ["rt", "rt-multi-thread", "macros"] }
token-source = "1.*"
tracing = "0.*"
uuid = { version = "1.*", features = ["v7"] }
walkdir = "2.*"


[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.release-no-lto]
inherits = "release"
lto = false
