[package]
name = "py-potatohead"
version = { workspace = true }
edition = "2021"

[lib]
name = "potato_head"
crate-type = ["cdylib", "rlib"]

[dependencies]

pyo3 = { workspace = true }
potato-head = { workspace = true, features = ["mock"] }

[features]
default = []

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
