[package]
name = "py-potato_head"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "potato_head"
crate-type = ["cdylib", "rlib"]

[dependencies]

pyo3 = { workspace = true }
rusty-logging = { workspace = true }
potato-head = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3