[package]
name = "py-potato_head"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "potato_head"
crate-type = ["cdylib", "rlib"]

[dependencies]
potato-head = { workspace = true }
potato-prompts = { workspace = true }
potato-providers = { workspace = true }
potato-tools = { workspace = true }

pyo3 = { workspace = true }
rusty-logging = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

