[package]
name = "baked-potato"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Demml <support@demmlai.com>"
]

license = "MIT"
description = "Dev dependencies for PotatoHead"

[dependencies]
potato-error = { workspace = true }
potato-prompts = { workspace = true }
potato-providers = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
pyo3 = { workspace = true }
tracing = { workspace = true }
