[package]
name = "baked-potato"
version = { workspace = true }
edition = "2021"
description = "Test module for all potato crates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "baked_potato"
crate-type = ["cdylib", "rlib"]

[dependencies]
potato-agent = { workspace = true }
potato-prompt = { workspace = true }
potato-type = { workspace = true }
potato-workflow = { workspace = true }
potato-util = { workspace = true }
mockito = { workspace = true }
pyo3 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true}
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[[test]]
name = "integration"
path = "tests/lib.rs"


[profile.release]
lto = "fat"
codegen-units = 1
strip = true
debug = false