[package]
name = "potato-agent"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Potato brands"
license = "MIT"

[lib]
doctest = false

[dependencies]
potato-type = { workspace = true }
potato-provider = { workspace = true }
potato-util = { workspace = true }

base64 = { workspace = true }
http = { workspace = true }
gcloud-auth = { workspace = true }
pyo3 = { workspace = true }
reqwest = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
token-source = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }