[package]
name = "potato-agents"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Potato brands"
license = "MIT"

[lib]
doctest = false

[dependencies]
potato-types = { workspace = true }
potato-prompts = { workspace = true }
potato-utils = { workspace = true }

pyo3 = { workspace = true }
reqwest = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }