[package]
name = "potato-head"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Potato brands"
license = "MIT"

[lib]
doctest = false

[dependencies]
potato-type = { workspace = true }
potato-prompt = { workspace = true }
potato-util = { workspace = true }
potato-agent = { workspace = true }
potato-provider = { workspace = true }
potato-workflow = { workspace = true }
baked-potato = { workspace = true, optional = true }


[features]
default = []
mock = ["baked-potato"]