[package]
name = "potato-lib"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Demml <support@demmlai.com>"
]

license = "MIT"
description = "Main client library for Potato Head"

[dependencies]
baked-potato = { workspace = true, optional = true }
potato-error = { workspace = true }
potato-head = { workspace = true }
potato-prompts = { workspace = true }
potato-providers = { workspace = true }
potato-tools = { workspace = true }
