[package]
name = "potato-prompt"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Tell your potatoes what to do"
license = "MIT"

[lib]
doctest = false

[dependencies]
potato-type = { workspace = true }
potato-util = { workspace = true }


pyo3 = { workspace = true }
mime_guess = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }