[package]
name = "potato-prompts"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Tell your potatoes what to do"

[lib]
doctest = false

[dependencies]
potato-types = { workspace = true }
potato-utils = { workspace = true }


pyo3 = { workspace = true }
mime_guess = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }