[package]
name = "potato-providers"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Demml <support@demmlai.com>"
]

license = "MIT"
description = "Standardized interface for working with LLM client"

[dependencies]
potato-client = { workspace = true }
potato-error = { workspace = true }
potato-tools = { workspace = true }
potato-prompts = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
colored_json = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
pyo3 = { workspace = true }
tracing = { workspace = true }

