[package]
name = "potato-spec"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "YAML spec loader for potato-head agents and workflows"
license = "MIT"

[lib]
doctest = false

[dependencies]
potato-agent = { workspace = true }
potato-workflow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
