[package]
name = "potato-tools"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Demml <support@demmlai.com>"
]

license = "MIT"
description = "Standardized interface for working with LLM client"

[dependencies]
potato-error = { workspace = true }
potato-client = { workspace = true }

chrono = { workspace = true }
colored_json = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
pyo3 = { workspace = true }
tracing = { workspace = true }
