[package]
name = "potato-traits"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Demml <support@demmlai.com>"
]

license = "MIT"
description = "Standardized interface for working with LLM client"

[dependencies]
potato-client = { workspace = true }
potato-error = { workspace = true }
potato-providers = { workspace = true }
potato-prompts = { workspace = true }

futures-core = { workspace = true }
futures-util = { workspace = true }
pyo3 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

