[package]
name = "potato-type"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Toppings for your potatoes"
license = "MIT"

[lib]
doctest = false

[dependencies]
pyo3 = { workspace = true }
potato-util = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }