[package]
name = "potato-utils"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Utilities for your potatoes"

[lib]
doctest = false


[dependencies]
colored_json = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }