[package]
name = "potato-workflow"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Put the potatoes to work"
license = "MIT"

[lib]
doctest = false

[dependencies]
potato-type = { workspace = true }
potato-provider = { workspace = true }
potato-agent = { workspace = true }
potato-state = { workspace = true }
potato-util = { workspace = true }
jsonschema = { workspace = true }
chrono = { workspace = true }
pyo3 = { workspace = true }
pythonize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }