[package]
name = "potato-workflows"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Put the potatoes to work"

[lib]
doctest = false

[dependencies]
potato-types = { workspace = true }
potato-prompts = { workspace = true }
potato-agents = { workspace = true }
potato-utils = { workspace = true }

pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }